Only 45 errors left